atualizando diagramas